--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
             android:label="@string/title_activity_home_navigate"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activities.Registration"
+            android:name=".Modules.Registration"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activities.Login"
+            android:name=".Modules.Login"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activities.Home"
+            android:name=".Modules.Home"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
